# json-schema-rs

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  design.md  todo.txt
.claude/skills/competitor-json-schema-codegen-analysis/: SKILL.md  reference.md
.claude/skills/contribution-guide/: SKILL.md
.claude/skills/synthetic-schema-codegen-test/: SKILL.md
.cursor/skills/competitor-json-schema-codegen-analysis/: SKILL.md  reference.md
.cursor/skills/contribution-guide/: SKILL.md
.cursor/skills/release-notes/: SKILL.md
examples/: readme_example.rs  readme_example_schema.json  temp.rs
json_schema_rs/: Cargo.toml
json_schema_rs/examples/: basic.rs
json_schema_rs/src/: code_gen.rs  code_gen_rust_backend.rs  code_gen_settings.rs  codegen.rs  error.rs  json_pointer.rs  json_schema.rs  json_schema_parser.rs  json_schema_settings.rs  json_schema_spec_version.rs  lib.rs  main.rs  sanitize.rs  sanitizers.rs  schema.rs  validation.rs
json_schema_rs/src/cli/: generate.rs  mod.rs  utils.rs  validate.rs
json_schema_rs/src/code_gen/: error.rs  mod.rs  rust_backend.rs  settings.rs
json_schema_rs/src/json_schema/: error.rs  json_schema.rs  mod.rs  parser.rs  ref_resolver.rs  schema.rs  settings.rs  spec_version.rs
json_schema_rs/src/reverse_code_gen/: mod.rs
json_schema_rs/src/validator/: error.rs  mod.rs
json_schema_rs/tests/: integration.rs  json_schema_test_suite.rs  macro_multiple_inline.rs  macro_multiple_path.rs  macro_single_inline.rs  macro_single_path.rs  temp.rs
json_schema_rs/tests/fixtures/: other.json  simple.json
json_schema_rs_macro/: Cargo.toml
json_schema_rs_macro/src/: derive.rs  lib.rs
json_schema_rs_macro/tests/: derive_to_json_schema.rs  macro_array_property.rs  macro_boolean_property.rs  macro_defs_ref.rs  macro_deprecated.rs  macro_enum_property.rs  macro_examples.rs  macro_float_property.rs  macro_hyphenated_property.rs  macro_integer_min_max_u8.rs  macro_integer_property.rs  macro_min_items_max_items.rs  macro_min_length_max_length.rs  macro_multiple_inline.rs  macro_multiple_path.rs  macro_nested_object.rs  macro_number_min_max_f32.rs  macro_optional_float.rs  macro_optional_integer.rs  macro_single_inline.rs  macro_single_path.rs  macro_unique_items.rs  macro_uuid.rs
json_schema_rs_macro/tests/fixtures/: other.json  simple.json
json_schema_to_rust_cli/: Cargo.toml
json_schema_to_rust_cli/src/: main.rs
research/: README.md
research/benchmark/: README.md
research/reports/c/: badicsalex-json_schema_to_c.md  helmut-jacob-jsonschema-c.md  netmail-open-wjelement.md
research/reports/cpp/: pboettch-json-schema-validator.md  sourcemeta-blaze.md  tristanpenman-valijson.md
research/reports/csharp/: corvus-dotnet-Corvus.JsonSchema.md  json-everything-json-everything.md  ricosuter-njsonschema.md
research/reports/dart/: Workiva-json_schema.md
research/reports/go/: omissis-go-jsonschema.md  santhosh-tekuri-jsonschema.md  xeipuuv-gojsonschema.md
research/reports/java/: java-json-tools-json-schema-validator.md  joelittlejohn-jsonschema2pojo.md  networknt-json-schema-validator.md
research/reports/kotlin/: pwall567-json-kotlin-schema-codegen.md  pwall567-json-kotlin-schema.md
research/reports/lua/: api7-jsonschema.md  fperrad-lua-schema.md
research/reports/php/: jsonrainbow-json-schema.md  opis-json-schema.md  wol-soft-php-json-schema-model-generator.md
research/reports/python/: horejsek-python-fastjsonschema.md  koxudaxi-datamodel-code-generator.md  pydantic-pydantic.md  python-jsonschema-jsonschema.md
research/reports/ruby/: davishmcclurg-json_schemer.md  voxpupuli-json-schema.md
research/reports/rust/: BelfordZ-json-schema.md  Marwes-schemafy.md  Stranger6667-jsonschema.md  oxidecomputer-typify.md
research/reports/swift/: ajevans99-swift-json-schema.md  kylef-jsonschema.swift.md
research/reports/typescript/: ajv-validator-ajv.md  bcherny-json-schema-to-typescript.md  glideapps-quicktype.md
research/reports/zig/: pascalpost-json-schema-validator.md  travisstaloch-json-schema-gen.md
research/scripts/: clone-competitors.sh  clone-json-schema-test-suite.sh  list_keywords.sh
research/test-harvest/: README.md
specs/: README.md  download.sh
specs/ietf/: draft-bhutton-relative-json-pointer-00.html  draft-handrews-relative-json-pointer-00.html  draft-handrews-relative-json-pointer-01.html  draft-handrews-relative-json-pointer-02.html  draft-pbryan-zyp-json-ref-03.html
specs/json-schema.org/draft-01/: draft-zyp-json-schema-01.html
specs/json-schema.org/draft-04/: draft-fge-json-schema-validation-00.html  draft-luff-json-hyper-schema-00.html  draft-zyp-json-schema-04.html
specs/json-schema.org/draft-06/: draft-wright-json-schema-01.html  draft-wright-json-schema-hyperschema-01.html  draft-wright-json-schema-validation-01.html
specs/json-schema.org/draft-07/: draft-handrews-json-schema-01.html  draft-handrews-json-schema-hyperschema-00.html  draft-handrews-json-schema-hyperschema-01.html  draft-handrews-json-schema-validation-01.html
specs/json-schema.org/release-notes/: draft-06-json-hyper-schema-release-notes.html  draft-06-json-schema-release-notes.html  draft-07-json-hyper-schema-release-notes.html  draft-07-json-schema-release-notes.html  draft-2019-09-release-notes.html  draft-2020-12-release-notes.html
src/: codegen.rs  error.rs  json_pointer.rs  lib.rs  main.rs  schema.rs  settings.rs  validate.rs
tests/: integration-tests.rs  test_temp.rs
tests/schemas/: complex-schema-expected.rs  complex-schema.json  nested-objects.json  string-fields-only.json
(+7 files in other folders)
