[package]
name = "json-schema-rs"
version = "0.0.3"
edition = "2024"
rust-version = "1.93"
authors = ["Todd Everett Griffin <tgriffin115@gmail.com>"]
repository = "https://github.com/goddtriffin/json-schema-rs"
homepage = "https://www.toddgriffin.me/"
description = "A Rust library to generate Rust structs from JSON Schema."
license = "MIT"
keywords = ["json", "schema", "json-schema", "rust", "structs"]
categories = ["web-programming", "parsing"]
include = ["**/*.rs", "Cargo.toml", ".clippy.toml", "LICENSE", "README.md"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "json-schema-gen"
path = "src/main.rs"

[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }
unfulfilled_lint_expectations = { level = "forbid", priority = 1 }

[lints.clippy]
allow_attributes = { level = "forbid", priority = 1 }
nursery = { level = "allow", priority = 0 }
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
