[package]
name = "json-schema-to-rust-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[[bin]]
name = "json-schema-to-rust-cli"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
json-schema-rs = { path = "../json_schema_rs" }
